--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URL=mongodb://localhost:27017/Expense_traker
+MONGO_URL=mongodb+srv://akshayadev23:U5JFXTyC8UxmFNRZ@cluster0.nvno9ag.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
 EMAIL=akshayas517@gmail.com
 EMAIL_PASS=eedb uxxv kyoc hodt
