--- a/client/angular.json
+++ b/client/angular.json
@@ -32,18 +32,19 @@
           },
           "configurations": {
             "production": {
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "6kb",
-                  "maximumError": "6kb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kb",
-                  "maximumError": "8kb"
-                }
-              ],
+            "budgets": [
+  {
+    "type": "initial",
+    "maximumWarning": "1mb",
+    "maximumError": "2mb"
+  },
+  {
+    "type": "anyComponentStyle",
+    "maximumWarning": "6kb",
+    "maximumError": "8kb"
+  }
+]
+
               "outputHashing": "all"
             },
             "development": {
